Tests/Modules/Error/Nested/.build/innergoal.pr
{
  "name": "InnerGoal",
  "description": "InnerGoal calls ThrowInnerError; if it errors, it calls InnerHandler via error.handle modifier.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "call ThrowInnerError, on error call InnerHandler",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "goal",
          "action": "call",
          "parameters": [
            {
              "name": "GoalName",
              "value": {
                "name": "ThrowInnerError"
              },
              "type": "goal.call"
            },
            {
              "name": "Actor",
              "value": "this",
              "type": "actor(user|service|system)"
            }
          ],
          "defaults": null,
          "modifiers": [
            {
              "module": "error",
              "action": "handle",
              "parameters": [
                {
                  "name": "Actions",
                  "value": [
                    {
                      "module": "goal",
                      "action": "call",
                      "parameters": [
                        {
                          "name": "GoalName",
                          "value": {
                            "Name": "InnerHandler"
                          },
                          "type": "goal.call"
                        }
                      ],
                      "defaults": null,
                      "modifiers": []
                    }
                  ],
                  "type": "list<action>"
                }
              ],
              "defaults": null,
              "modifiers": []
            }
          ]
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/InnerGoal.goal",
  "prPath": "/.build/innergoal.pr",
  "hash": "a60dacbb90144444eb57f4e9cb6fa09714365e4b956c674f73d69b64dc38f5c7",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}